--- a/templates/html/ProfilePage.html
+++ b/templates/html/ProfilePage.html
@@ -3,7 +3,7 @@
 {% block head %}
 {% load static %}
 <link rel="stylesheet" href="{% static 'styles/profile.css' %}" type="text/css">
-{% endblock %}
+{% endblock head %}
 
 {% block content %}
 
