--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -1,95 +1,27 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Poppins:400;500;600;700&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
 body {
   padding: 0;
   margin: 0;
   background-color: white;
 }
 
-.navbar {
-  position: relative;
-  overflow: hidden;
-  height: 60px;
-  width: 100%;
-  background-color: white;
-  padding: 0;
-  margin: 0;
-  font-size: 22px;
-  list-style: none;
-  display: inline-flex;
-}
-
-.navbar li a {
-  text-decoration: none;
-  font-size: 25px;
-  color: rgb(0, 0, 0);
-  height: 100%;
-  width: 100%;
-}
-
-.menu {
-  width: 50%;
-  height: 100%;
-}
-
-.menulinks {
-  height: 100%;
-}
-
-.account {
-  width: 50%;
-  height: 100%;
-  margin: 0;
-  
-}
-
-.accountlinks {
-  padding: 0;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 10px;
-  margin: 0;
-  height: 100%;
-  float: right;
-}
-
-.accountlinks:hover {
-  background-color: rgb(0, 0, 0);
-  color: rgb(189, 222, 255);
-}
-
-/* #region Footer */
-
-.footer {
-  width: 100%;
-  height: 200px;
-  display: inline-flex;
-  background-color: white;
-}
-
-.footer .info {
-  width: 50%;
-  height: 100%;
-}
-
-.footer .socialMedia {
-  width: 50%;
-  height: 100%;
-}
-
-.footer .socialMedia a {
+.first {
   display: block;
-  padding-top: 4%;
-  font-size: 20px;
-  text-align: center;
 }
 
-.footer .socialMedia a, i {
-  margin-right: 10px;
+.second {
+  margin-top: 60px;
+  display: flex;
 }
 
-.footer .info h3 {
-  font-size: 20px;
-  text-align: center;
-  padding-top: 80px;
-}
-
+/* #region */
 /* #endregion */
